--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop site builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobile web page design software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="jQWrt9xGdB3juhWKwj3kPTZ2Bv+tfVXO48xreJFhDZgvinaU0f3qFy1dnWyYUnhLTQsJKZUKapJtMqhT1iOc92s/ZgWu6QTf2JRDZ0nB+H8Q1is9xLUWLIVjYsIdbfrg" data-form-email="true">
+                    <input type="hidden" value="hxO0D7fdIc02rvpOzZkmeFtiWpO0JXSnoyROiCrOFxJRJ86DR8uJ0pYDPaLkdh9UH8XOsVGH0k5obn54i/DOnedHhLw6cXuG58v6EZWrRtDgi+Kz/OuEM6/XN3EfU4Oi" data-form-email="true">
 
                     
 
