--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg site design software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap website generator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="dQAMlHcwoB2ZnFycpVZw7uUfw2871coFctqx7hmLiNIoodx7Yzr79J6S0+E1/aixFddFl2YG3rSL5JWsFHw0r1Cn11rFUqcs0jzfhTkjW7D/UTkoyINkcU02e/XqlAm/" data-form-email="true">
+                    <input type="hidden" value="Vg1r6o+e1xd1esaZm7jUAboOQ20ZDN23yaeW7dA0Ea7DC3+TIITiRKx3eoHz97lolEFpyybVTOeGvqQzXZ63Guj9c27fjxeQ9IcIc6ANIbe/lEqKwi4+NiQ4Y0orYTuU" data-form-email="true">
 
                     
 
