--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop website generator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web site builder software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="VcxtxY3RBXeoH+jtoa2Oium+rRrNa6/bjhb5mfl95d9VqU6YP79UQUomPNRUsymy+ltsBxQMnsM2cqyKzz2NuEX7OrINBI/szHfIsFafMa74p/wHpH9a6uKIWkPUjXtZ" data-form-email="true">
+                    <input type="hidden" value="B2tCrWYeONM1giNGQ8rZ0eZ3OfmIoY7STwCiZKshrfiddBX1S/fNA9+whfOGZ6fvHw1kdd6Zr9OAIRNeTuUoajsaJr7dk9Pgufb5sOoPpsRMlMACVhn3HNW5/OicF0Nq" data-form-email="true">
 
                     
 
