--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg website design software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="fHlMRP920GbmCyf3C369LiyEs3XB4reWjqumLokcja0xdBAaxCImyNN5SAMKrcIfnI4L3IJbHIxVZLehpKa4UdMyBMvTr6IoUByM6Lvw6PBaiueG/A1ix/k5qU7pUBq+" data-form-email="true">
+                        <input type="hidden" value="d4bjS3+vGZZMsTxIbvkl+l8F+ayw00xObKLchdTQ9nYsMT7mEJD0RFkwyP3zI/pRH5jZpbwBHo9NtNqLtQu8jXkcBcoHEAus75ixNCM7hGWUj87FCZknMMWpOLXc7lbD" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="HzVROqZh+r2nyTDv8ZZ9wnkOoPjizvO7in5AT/auM9jhVQZuuUUcy325moW1ok6vfIxZO6Fme6olWIjQ17/xf/WYEJ9k1lD16+fIq9EesO1UrKQVlT5bDeoo3nqmhBv9" data-form-email="true">
+                    <input type="hidden" value="IkHbSXWch2KNG3n3DsVi0K/ENziRVvjc+78KK0DlJM6OSzw09gewA5HqFNYwNkMaq0CynNdh02G0huEF0pGPMwAdvrTYHegNZ9SHtRpEhB1sErsWbiX1ihsAo8NViZnS" data-form-email="true">
 
                     
 
