--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web design software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">drag and drop website building software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="37xh2V1V4t9lorKbWzTXpF7YfvTeJnlWmmVmqwSlnPG3/qu3g9XCx8kGN8fwvNxObQh0fvUdRlQTjjmSLlLu+2dgfdHSdp0CdysX6ztgqOdIO2eg5+c7Qoadr7aMVLhv" data-form-email="true">
+                    <input type="hidden" value="yI1RS3NIK2bg1ANKFHOJEjiT3a81ZHRL4PumXM9Vv5b1x4uPVcXGniTwRwvA9M61f9C6OHKor5mQ+OSWKNezGfQ8ZgYH3FzCBnA4oZCK4FjFyp4yCPVr8bJFiH2n8Eqe" data-form-email="true">
 
                     
 
