--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web site maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy mobile web generator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="FhPGnQk1Mtd0yAvpLQI/AfEpaJAEGI+lDoxzBSbOgRPuLlOl65/UeOJBIQ9u85WQt4zDuJRqyZK78KloYeaTS+ZeElwjgnJBkYkeYaTjP7T5tqn6WnPoXgCmxrsX4pqA" data-form-email="true">
+                    <input type="hidden" value="RrrdINSs3gdM9kV5TDc1RhmxZkXUisyHTY/JNvlDKPHDXPHEfEttfBswApOD55rs/svJnNaHbc/X++v4QBlRIYmhZjFhRMJcLza6ezOpXreLgx7Yk4uxt911rslpSQ/E" data-form-email="true">
 
                     
 
