--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best offline site builder software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive site maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="t1EjqS3FjMq8a3GN0llYofNYNkbZhEc72/si9W16x97bZDtj4tqbJZyQzCZph2hXSUZQuwTYcywSR60kPOaphXmMoKMLttoZ08qcStYT7/TPV0Fr5OzY8OGa2SDpR/WT" data-form-email="true">
+                    <input type="hidden" value="Zo1iDo/EkSzm+FRURw6pC2Z4LRjrCRA6yqkY4NyTwaE08Wm3GFLPJP2dWLIxm916By9lHA2SNTYbhFBfN2nsrUC2m8LYA6TETqqUbE8ufw01qowhl2gfuhohtMymE4Jr" data-form-email="true">
 
                     
 
